--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ code {
   --background: #ffffff;
   --text: #363537;
   --widget-background: #f0f0f0;
-  --icon-color: #ffd700;
+  --icon-color: #f4b004;
 }
 
 /* Dark Theme */
